# libprecog

./: .gitmodules  CMakeLists.txt  README.md
src/samples/: CMakeLists.txt  backgroundNormalization_sample.cpp  cleanBackgroundToWhite_sample.cpp  correctNUIL_sample.cpp  deskew_sample.cpp  removeDots_sample.cpp  removeHolePunch_sample.cpp  removeLines_sample.cpp  warp_sample.cpp
src/samples/balance/: balanceColor_sample.cpp  balanceGrayWorldWhite_sample.cpp  balanceSimpleWhite_sample.cpp  gammaCorrection_sample.cpp
src/samples/binarizations/: binarizeByLocalVariances_sample.cpp  binarizeCOCOCLUST_sample.cpp  binarizeFBCITB_sample.cpp  binarizeFeng_sample.cpp  binarizeLocalOtsu_sample.cpp  binarizeMokji_sample.cpp  binarizeNICK_sample.cpp  binarizeNiblack_sample.cpp  binarizeSauvola_sample.cpp  binarizeWolfJolion_sample.cpp
src/samples/border_detection/: autoCrop_sample.cpp
src/samples/deblur/: basicDeblur_sample.cpp  wienerFilter_sample.cpp
src/samples/denoise/: denoiseSaltPepper_sample.cpp  kuwaharaFilter_sample.cpp
src/samples/thinning/: thinGuoHall_sample.cpp  thinZhangSuen_sample.cpp
